--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 /[Oo]bj/
 /[Bb]uild/
 # /[Bb]uilds/
+Builds/*
+!Builds/*.apk
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
 
@@ -56,7 +58,7 @@ ExportedObj/
 sysinfo.txt
 
 # Builds
-*.apk
+# *.apk
 *.aab
 *.unitypackage
 *.app
